<resources>
    <string name="app_name">Idly Dosey</string>
    <string name="sign_in">Sign In</string>
    <string name="email_phone">Phone</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="dont_have_account">Don\'t have an account?Sign Up Here!!</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="fill_credentials">Please enter all the credentials</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="failed_login">Failed to login</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="phone">Phone</string>
    <string name="get_otp">Next</string>
    <string name="failed_to_verify">Failed to verify your phone number</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">E-mail Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="already_registered">User Already Registered</string>
    <string name="already_have_account">Already have an account? Sign In Here!!</string>
    <string name="valid_email">Enter a valid Email address</string>
    <string name="valid_phone">Enter a valid Phone Number</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="sucess_register">Successfully Registered</string>
    <string name="failed_register">Failed to Register</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="password_otp">OTP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="change_password">Change Password</string>
    <string name="failed_update">Failed to Update</string>


    <string name="order_history">Order History</string>
    <string name="address_book">Address Book</string>
    <string name="track_orders">Track Orders</string>
    <string name="more">More</string>
    <string name="support">Support</string>
    <string name="logout">Sign out</string>
    <string name="refer_friend">Refer a friend</string>
    <string name="name">Name</string>
    <string name="email_id">Email</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="referral_code">Referral Code</string>
    <string name="number_referrals">Number of Referrals</string>
    <string name="referred">Referred</string>
    <string name="items">items</string>
    <string name="checkout">Checkout</string>
    <string name="subtotal">Sub Total</string>
    <string name="rupees">₹</string>
    <string name="order_id">Order Id</string>
    <string name="delivered">Delivered</string>
    <string name="invite">Invite</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm password</string>


    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of Idly Dosey is available. Please update to version</string>
    <!--    <string name="youAreNotUpdatedMessage1">\s now</string>-->
    <string name="youAreNotUpdatedMessage1">.</string>
    <string name="update">Update</string>

    <string name="home">Home</string>
    <string name="address_name">Lathesh</string>
    <string name="home_address">jp nagar,mysore</string>
    <string name="phone_number">+919108471793</string>
    <string name="office">Office</string>
    <string name="date">2020-12-09</string>
    <string name="date_string">Date:</string>
    <string name="za12zb">Za12zb</string>
    <string name="dispatched">Dispatched</string>
    <string name="completed">Completed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delivery">Delivery</string>
    <string name="tax">Tax</string>
    <string name="grand_total">Grand total</string>
    <string name="place_order">Place Order</string>
    <string name="version">Version</string>
    <string name="licence">Licence</string>
    <string name="company">Company</string>
    <string name="cmp_name">Designurway</string>
    <string name="cmp_address"> #191 , Suswani Towers , 3rd floor, B Block, 1st stage, C-Block, JP Nagar, Mysuru, Karnataka 570008</string>

    <string name="medical_emergency">Emergency medical services</string>
    <string name="emergency_quote">Care should not start in the emergency room</string>
    <string name="press_for_emergency">click for emergency</string>
    <string name="no_data">No Data found</string>
    <string name="food_deetail">Food is usually of plant, animal or fungal in origin, and contains essential nutrients, such as carbohydrates, fats, proteins, vitamins, or minerals. The substance is ingested by an organism and assimilated by the organism\'s cells to provide energy, maintain life, or stimulate growth.</string>
    <string name="dosa">Dosa</string>
    <string name="profile">Profile</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="save_n_continue">Save and Continue</string>
    <string name="falt_no">Flat/House Number</string>
    <string name="location">Area/Landmark/Pincode</string>
    <string name="change">Change</string>
    <string name="skip">Don\'t have a Referrral Code? Skip -></string>
    <string name="pick_reward">Total Reward Earned</string>
    <string name="take_photo">Take Photo</string>
    <string name="title_location_permission">Grant Permission</string>
    <string name="grand_permission">Kindly grant the permission to ue use your current location</string>
    <!--    <string name="proceed_to_payment">Proceed to Payment</string>-->
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="redeem_combo">Redeem your Combo</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="transaction_id">Transaction ID :</string>
    <string name="sdkfakdls156">sdkfakdls156</string>
    <string name="payment_done_successfully">Order placed successfully</string>
    <string name="locality_colony_street">LOCALITY/COLONY/STREET</string>
    <string name="flat_house_no_floor_building">FLAT/HOUSE.NO/FLOOR/BUILDING</string>


    <string name="other">OTHER</string>
    <string name="pay">PAY</string>
    <string name="enter_amount"> Amount</string>
    <string name="rupess">\u20B9</string>
    <string name="title_activity_maps">Map</string>

    <!--    Allow Location Activity String-->

    <string name="allowLocationH2"> Set your location to start exploring \n world around you</string>

    <string name="allowLocationH1"> Hi, nice to meet you!</string>

    <string name="manualLocation">Search Location</string>

    <string name="GpsTxt">Select Current Location</string>

    <string name="ContactSubmitBtn">Submit</string>

    <string name="allowTxt">We only access location while you are using the app to improve your order experience.</string>
</resources>