<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".a.activity.OTPVerificationActivity"
    >

        <ImageView
            android:id="@+id/curve_bg"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/login_bg"/>


        <ImageView
            android:id="@+id/app_logo_here"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:src="@drawable/logonew" />

        <TextView
            android:id="@+id/sign_in_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/curve_bg"
            android:text="@string/otp_verification"
            android:textSize="@dimen/large_et_size"
            android:fontFamily="@font/averia_sans_libre"
            android:textStyle="bold"
            android:elevation="2dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_in_tv"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:elevation="2dp"
            android:padding="10dp"
            android:drawableLeft="@drawable/email_img"
            android:hint="@string/email_phone"
            android:drawableTint="@color/colorPrimary"
            android:maxLines="1"
            android:fontFamily="@font/averia_sans_libre"
            android:textSize="@dimen/reg_et_size"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/curved_edge"/>

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:maxLines="1"
            android:singleLine="true"
            android:elevation="2dp"
            android:layout_below="@+id/email_et"
            android:hint="@string/password_otp"
            android:drawableLeft="@drawable/password_img"
            android:drawableTint="@color/colorPrimary"
            android:fontFamily="@font/averia_sans_libre"
            android:textSize="@dimen/reg_et_size"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/curved_edge"/>
        <CheckBox
            android:id="@+id/remember_me_cbx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"
            android:text="@string/remember_me"
            android:fontFamily="@font/averia_sans_libre"
            android:textSize="@dimen/reg_et_size"
            android:buttonTint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:checked="true"
            android:layout_below="@+id/password_et"/>


        <TextView
            android:id="@+id/forgot_pwd_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pwd"
            android:layout_below="@+id/password_et"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/averia_sans_libre"
            android:textSize="@dimen/reg_et_size"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="10dp"
            android:padding="10dp"/>

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:text="@string/verify_otp"
            android:textStyle="bold"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:layout_below="@+id/remember_me_cbx"
            android:layout_centerHorizontal="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:fontFamily="@font/averia_sans_libre"
            android:textSize="@dimen/sub_header_size"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_curve_bg"/>

      <!--  <TextView
            android:id="@+id/dont_have_account_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/averia_sans_libre"
            android:textSize="@dimen/reg_et_size"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"/>-->











</RelativeLayout>